@@ -1,3 +1,8 @@
+2004-02-12  Joe Shaw  <joe@ximian.com>
+
+	* libsoup/soup-dns.c (check_hostent): Call read() in a do-while
+	loop to prevent DNS errors from short reads.
+
 2004-02-11  Joe Shaw  <joe@ximian.com>
 
 	* configure.in: Bumped version number to 2.1.7 and libtool
